kubernetes/apps/piraeus/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piraeus
  namespace: piraeus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
    - host: piraeus.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linstor-controller
                port:
                  name: api
  tls:
    - hosts:
        - piraeus.${domain}
      secretName: piraeus.${domain}-cert
